החלפת תמונות ופתיחת המטבח על פי ז'נבייב - חומרים

--- a/index.html
+++ b/index.html
@@ -377,6 +377,8 @@ Error message and password prompt
 
 <li>ז'נבייב</li>
 
+<li>חומרים</li>
+
 <li>חזרת</li>
 
 <li>חלומות שחלמנו</li>
@@ -8411,7 +8413,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="גורה יויו [[יד ימין אינה יודעת]] [[החיים זה לא דיבורים]] דניאל [[דןדן נסע]] [[גבר פריבילגי]] [[מה שבאמת קרה בארוחת כריסמס]] ז'נבייב [[ההיררכיה במקרר]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="הקוסקוס חומרים [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8431,7 +8433,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170514232543459" title="$:/temp/search">
+<div created="20161023184814872" modified="20170515194707495" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8908,7 +8910,7 @@ Error message and password prompt
 מוסיפים פנימה את צרור האספרגוס וצולים כמה דקות.
 * בוזקים מלח ים גס, מערבבים בקלות, ומגישים. (אפשר גם לאכול במהלך היום או לשמור במקרר יומיים).</pre>
 </div>
-<div created="20161112191527440" modified="20170508145312008" title="ארוחת כריסמס">
+<div created="20161112191527440" modified="20170515183437038" title="ארוחת כריסמס">
 <pre>[img[pictures/aruchat-christmas.jpg]]
 
 
@@ -9017,8 +9019,7 @@ Error message and password prompt
 !!![[גורה]]:</pre>
 </div>
 <div created="20170514214551974" modified="20170514232942321" tags="[[סיפורים אמיתיים]]" title="גבר פריבילגי">
-<pre>
-[img[pictures/gever-privilegy.jpg]]
+<pre>[img[pictures/gever-privilegy.jpg]]
 
 !!![[יויו]]:
 
@@ -9344,12 +9345,12 @@ Error message and password prompt
 K-SISTER [[לעולם תהיה|HH]] K-SISTER
 </pre>
 </div>
-<div created="20170504162635914" modified="20170505224135529" title="האסיפה הראשונה">
+<div created="20170504162635914" modified="20170515154141970" title="האסיפה הראשונה">
 <pre>[img[pictures/asefot.jpg]]
 
 !!![[פיליפ]]:
 
-הפגישה הראשונה של כולנו, היתה בארוחת הכריסמס המונומנטלית, שהתחוללה בדצמבר 2015, ומאז בעצם אנחנו מתראים כל הזמן. הצעירים ממש עובדים יחד, ואני מגיע או מגיח לארוחות משפחתיות וכיו&quot;ב.
+הפגישה הראשונה של כולנו, היתה [[בארוחת הכריסמס המונומנטלית|ארוחת כריסמס]], שהתחוללה בדצמבר 2015, ומאז בעצם אנחנו מתראים כל הזמן. הצעירים ממש עובדים יחד, ואני מגיע או מגיח לארוחות משפחתיות וכיו&quot;ב.
 
 לפני שבוע, (כלומר, למעלה משנה אחרי אותה ארוחה), זו הייתה הפעם הראשונה מאז, שיויו ביקש מכולנו לבוא, וממש כולם חוץ [[מדןדן|דןדן נסע]] שנסע, היו, כולל איריס, ביתה של אווה אהובתי.
 
@@ -9405,8 +9406,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 </pre>
 </div>
 <div created="20170514230844769" modified="20170514232328726" tags="[[המטבח על פי ז'נבייב]]" title="ההיררכיה במקרר">
-<pre>
-[img[pictures/bamekarer.jpg]]
+<pre>[img[pictures/bamekarer.jpg]]
 
 !!![[ז'נבייב]]:
 
@@ -9417,8 +9417,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 כי זה לא נורא אם נשפך קצת רוטב פירות יער על הבשר, אבל זה בלתי הפיך, אם הרוטב של הבשר נשפך על העוגות.</pre>
 </div>
 <div created="20170514201348734" modified="20170514233042321" tags="[[סיפורים אמיתיים]]" title="החיים זה לא דיבורים">
-<pre>
-[img[pictures/hachaim-ze-lo.jpg]]
+<pre>[img[pictures/hachaim-ze-lo.jpg]]
 
 !!![[גורה]]:
 
@@ -9987,12 +9986,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 ה-K סיסטרס לא סובלות אותה.</pre>
 </div>
-<div created="20161213170938039" modified="20170508144545069" title="הקוסקוס">
+<div created="20161213170938039" modified="20170515195725302" title="הקוסקוס">
 <pre>[img[pictures/hacouscous.jpg]]
 
 !!![[אלפרד]]:
 
-אל הקוסקוס, שזה בעצם &quot;שה ז'נבייב&quot; נכנסים מהדלת הראשית לפרוזדור קצר, שמשמאלו חלון ודלת המטבח, ובסופו חדר שמכיל עשרה שולחנות קטנים.
+אל הקוסקוס, שזה בעצם &quot;שה ז'נבייב&quot; נכנסים מהדלת הראשית לפרוזדור קצר, שמשמאלו חלון ודלת המטבח, ובסופו חדר שמכיל עשרה שולחנות קטנים. 
 באם פונים ממנו ימינה מגיעים למשרד או לשרותים או לחצר קטנה ומרוצפת, שבימים החמים מוסיפה עוד שבעה שולחנות למסעדה.
 
 [[כשהיא|ז'נבייב]] נכנסה למסעדה, לפני כמה שנים, חברים שלה המליצו לה על חבורה של [[חמישה סינים|הסינים]] צעירים לשיפוץ.
@@ -10000,7 +9999,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 נכון לעכשיו עובדים שם: [[סוניה]], [[יויו]], [[דןדן]], [[אירי]] [[ודניאל|דניאל]], אך [[גורה]] היא זו שדרכה הכרנו כולנו את [[ז'נבייב]].
 גם אותי גורה לקחה [[לאכול|המטבח על פי ז'נבייב]] שם בתקופה שהיינו יחד.
 
-הקוסקוס הוא מסוג המקומות, שלאחר שאתה מסיים לאכול בהם, אתה רווי נחת, ומלקק את השפתיים משך כל היום כדי להיזכר בטעם.
+את האוכל מקבלים [[בקערות קרמיקה|חומרים]], שז'נבייב אוספת כבר שנים, ולאחר שמסיימים אותו, נשארים רוויי נחת, מלקקים את השפתיים משך כל היום כדי להיזכר בטעם.
 
 בתקופה הלא ארוכה במיוחד בה [[כולנו מכירים את כולנו|האחיות כהן]], ז'נבייב [[ואבי|ג'וזף אברואה]] הפכו לזוג אוהבים, כך ש[[במשק האוטרקי שלנו|המשק האוטרקי שלנו]], לא רק שיש לנו גם מסעדה, יש לי אימא חורגת מהסוג שאין באגדות.
 
@@ -10066,6 +10065,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 היא חתולה יפה שמשפחתה היגרה ממרוקו לפריז.
 
 היא [[אוהבת|אהבה]] ודואגת לכולנו. בסוף כל יום עבודה היא עוברת ובודקת [[שהכל במקום|ההיררכיה במקרר]]. במהירות היא מציצה לכל הפינות למרות שהיא יודעת שהסמרטוטים שבידינו לא יפספסו אף סמ&quot;ר. ואולי, פתאום אני חושב, היא פשוט רווה נחת, אחרי שסיימה לספור את  הקופה, ולדעת [[שלא לחינם למדה ראיית חשבון|המטבח על פי ז'נבייב]].</pre>
+</div>
+<div created="20170515195747350" modified="20170515195827572" tags="[[המטבח על פי ז'נבייב]]" title="חומרים">
+<pre>
+[img[pictures/chomarim.jpg]]</pre>
 </div>
 <div created="20170411155118410" modified="20170412203304600" tags="[[מתכוני ארוחת הכריסמס]]" title="חזרת">
 <pre>[img[pictures/chazeret.jpg]]
