--- a/index.html
+++ b/index.html
@@ -8404,8 +8404,8 @@ Error message and password prompt
 <div created="20161023184709475" modified="20170515201654190" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/System</pre>
 </div>
-<div created="20161023184705203" modified="20170515201943679" title="$:/state/tab/sidebar--1835078512">
-<pre>$:/core/ui/SideBar/Open</pre>
+<div created="20161023184705203" modified="20170515202243361" title="$:/state/tab/sidebar--1835078512">
+<pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/EditorToolbar</pre>
@@ -8413,7 +8413,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[לקשקש בשולי הדף]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10502,7 +10502,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 [[ספרו לנו|https://github.com/tamaroty/coen-sisters/issues]] אם אתם יודעים איך 😉</pre>
 </div>
-<div created="20170508150726832" modified="20170508163424438" tags="[[הנה, כך]]" title="לקשקש בשולי הדף">
+<div created="20170508150726832" modified="20170515203418761" tags="[[הנה, כך]]" title="לקשקש בשולי הדף">
 <pre>@@.ltr
 [img[https://c1.staticflickr.com/1/188/385649535_51afbc4caf_o_d.jpg]]
 &lt;small&gt;
@@ -10521,7 +10521,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 [img[pictures/button-save.png]]
 (הוא הופך לאדום עם שיניתם משהו),
 ומקבלים קובץ (בגודל כמה מגה בייט בודדים) שמכיל את כל האתר הזה (לא כולל תמונות, אבל לא תרגישו בהבדל כל זמן שיש לכם חיבור אינטרנט).
-שומרים את הקובץ אצלכם על הדיסק, והרי לכם גירסה משלכם של האתר. אפשר לפתוח אותו בדפדפן, וזה //כמו אמיתי™//.</pre>
+שומרים את הקובץ אצלכם על הדיסק, והרי לכם גירסה משלכם של האתר. אפשר לפתוח אותו בדפדפן, וזה //כמו אמיתי™//.
+
+''האם מותר לכם לפרסם את הגירסה החדשה שלכם ברשת?''
+כן, במסגרת תנאי הרשיון (לפרטים, לחצו על ה&lt;img alt=&quot;Creative Commons License&quot; style=&quot;width:44px; border-width:0&quot; src=&quot;https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png&quot;&gt; בצד ימין למטה)</pre>
 </div>
 <div created="20170328175210280" modified="20170419204512413" tags="[[אחיות חוץ]]" title="מאיר אריאל">
 <pre>[img[pictures/0bBcnTVPP0ggEKv3.jpg]]
