--- a/index.html
+++ b/index.html
@@ -8413,7 +8413,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[שיטת אלכסנדר]] [[לקשקש בשולי הדף]] הקוסקוס [[ארוחת כריסמס]] חומרים [[האחיות כהן]]" title="$:/StoryList">
+<div list="הכתיבה [[החיים זה לא דיבורים]] [[האסיפה הראשונה]] [[ארוחת כריסמס]] [[המטבח על פי ז'נבייב]] חומרים [[דפני אברואה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8433,7 +8433,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170515194707495" title="$:/temp/search">
+<div created="20161023184814872" modified="20170517235955035" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9288,7 +9288,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170225205632304" modified="20170401164528460" title="דפני אברואה">
+<div created="20170225205632304" modified="20170517234328832" title="דפני אברואה">
 <pre>[img[pictures/VyWqwwQS42pbZ2oV.jpg]]
 
 !!![[אלפרד]]:
@@ -9619,16 +9619,16 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 ([[cc|https://creativecommons.org/licenses/by-nc-sa/2.0/]]) [[Timo Heuer|https://www.flickr.com/photos/upim/3363312260]]
 @@</pre>
 </div>
-<div created="20161218221618167" modified="20170424213253879" title="המשק האוטרקי שלנו">
+<div created="20161218221618167" modified="20170516175342827" title="המשק האוטרקי שלנו">
 <pre>[img[pictures/hameshek-shelanoo.jpg]]
 
 !!![[אלפרד]]:
 
-במשק האוטרקי שלנו, העצמאות העיקרית היא שאיננו זקוקים לאף אדם נוסף כי יש לנו זה את זה ואנחנו צוות. אני סומך על כל אחד ואחת מחברי לאחיות כהן ולראשונה אני לא חושש מדבר ואני גם יודע שאבי  כמוני, כבר לא דואג. 
+במשק האוטרקי שלנו, העצמאות העיקרית היא. שאיננו זקוקים לאף אדם נוסף כי יש לנו זה את זה, ואנחנו צוות. אני סומך על כל אחד ואחת מחברי לאחיות כהן, ולראשונה אני לא חושש מדבר ואני גם יודע שאבי  כמוני, כבר לא דואג. 
 
-שנינו יודעים שגם עם אחותי תתחרבן לגמרי יש לנו גב שהופך אותנו לחלק ממשק אוטרקי חברתית אנושית נפשית. 
+שנינו יודעים, שגם עם [[אחותי|דפני אברואה]] תתחרבן לגמרי, יש לנו גב, שהופך אותנו לחלק ממשק אוטרקי חברתית, אנושית, נפשית. 
 
-ואלה לפני שמניתי את היכולת לשפץ דירות, לשפץ רהיטים, לבשל, לאפות,יש לנו את המסעדה, יש לנו מטפלים בכמה אלטרנטיבות ועד כדי כדורים פסיכיאטריים.יש לנו משקיע הון סיכון, יש לנו עורך סאונד, אנחנו יודעים לערוך וידאו, יש לנו כותבות ותמיד יש צנצנת עם סוכריות גומי.
+ואלה, לפני שמניתי, את היכולת לשפץ דירות, לשפץ רהיטים, לבשל, לאפות,יש לנו את המסעדה, יש לנו מטפלים בכמה אלטרנטיבות ועד כדי כדורים פסיכיאטריים.יש לנו פובליציסט, יש לנו עורך סאונד, אנחנו יודעים לערוך וידאו, יש לנו כותבות, ותמיד יש צנצנת עם דובוני גומי.
 
 
 </pre>
@@ -9986,7 +9986,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 ה-K סיסטרס לא סובלות אותה.</pre>
 </div>
-<div created="20161213170938039" modified="20170515195725302" title="הקוסקוס">
+<div created="20161213170938039" modified="20170517235841154" title="הקוסקוס">
 <pre>[img[pictures/hacouscous.jpg]]
 
 !!![[אלפרד]]:
@@ -9999,9 +9999,9 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 נכון לעכשיו עובדים שם: [[סוניה]], [[יויו]], [[דןדן]], [[אירי]] [[ודניאל|דניאל]], אך [[גורה]] היא זו שדרכה הכרנו כולנו את [[ז'נבייב]].
 גם אותי גורה לקחה [[לאכול|המטבח על פי ז'נבייב]] שם בתקופה שהיינו יחד.
 
-את האוכל מקבלים [[בקערות קרמיקה|חומרים]], שז'נבייב אוספת כבר שנים, ולאחר שמסיימים אותו, נשארים רוויי נחת, מלקקים את השפתיים משך כל היום כדי להיזכר בטעם.
+את האוכל מקבלים [[בקערות קרמיקה|חומרים]], שז'נבייב אוספת כבר שנים, ולאחר שמסיימים אותו, נשארים רוויי נחת, ומלקקים את השפתיים משך כל היום כדי להיזכר בטעם.
 
-בתקופה הלא ארוכה במיוחד בה [[כולנו מכירים את כולנו|האחיות כהן]], ז'נבייב [[ואבי|ג'וזף אברואה]] הפכו לזוג אוהבים, כך ש[[במשק האוטרקי שלנו|המשק האוטרקי שלנו]], לא רק שיש לנו גם מסעדה, יש לי אימא חורגת מהסוג שאין באגדות.
+בתקופה הלא ארוכה במיוחד בה [[כולנו מכירים את כולנו|האחיות כהן]], ז'נבייב [[ואבי|ג'וזף אברואה]] הפכו לזוג אוהבים, כך ש[[במשק האוטרקי שלנו|המשק האוטרקי שלנו]], לא רק שיש גם מסעדה, יש לי אימא חורגת מהסוג שאין באגדות.
 
 
 
@@ -10066,14 +10066,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 היא [[אוהבת|אהבה]] ודואגת לכולנו. בסוף כל יום עבודה היא עוברת ובודקת [[שהכל במקום|ההיררכיה במקרר]]. במהירות היא מציצה לכל הפינות למרות שהיא יודעת שהסמרטוטים שבידינו לא יפספסו אף סמ&quot;ר. ואולי, פתאום אני חושב, היא פשוט רווה נחת, אחרי שסיימה לספור את  הקופה, ולדעת [[שלא לחינם למדה ראיית חשבון|המטבח על פי ז'נבייב]].</pre>
 </div>
-<div created="20170515195747350" modified="20170515214852794" tags="[[המטבח על פי ז'נבייב]]" title="חומרים">
+<div created="20170515195747350" modified="20170517235122386" tags="[[המטבח על פי ז'נבייב]]" title="חומרים">
 <pre>[img[pictures/chomarim.jpg]]
 
 !!![[ז'נבייב]]:
 
-בעצם, מה שחשוב עם החומרים מהם עשויים הכלים איתם אנו עובדים, או החומרים מהם עשויים משטחי העבודה שלנו הוא, שהם יתערבבו מה שפחות עם חומרי הגלם המשמשים לבישול.
+בעצם, מה שחשוב עם החומרים מהם עשויים הכלים איתם אנו עובדים, או החומרים מהם עשויים משטחי העבודה שלנו הוא, שהם ישפיעו מה שפחות על חומרי הגלם המשמשים לבישול.
 
-אני מאד אוהבת לעבוד על שיש, הוא קר וחלק. בצק, יחסית, לא נדבק אליו. גם נירוסטה ראויה לשמש כמשטח עבודה, אך לדעתי היא מתאימה יותר לאזורי הכיורים והמדפים.
+אני מאד אוהבת לעבוד על שיש, הוא קר וחלק. בצקים, יחסית, לא נדבקים אליו. גם נירוסטה ראויה לשמש כמשטח עבודה, אך לדעתי היא מתאימה יותר לאזורי הכיורים והמדפים.
 
 לבחישת אוכל, עדיפות בעיני כפות עץ. לטריפת בלילות, מטרפת נירוסטה ידנית.
 
