--- a/index.html
+++ b/index.html
@@ -8413,7 +8413,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="מריאן [[האחיות כהן]]" title="$:/StoryList">
+<div list="אלפרד [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8433,7 +8433,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170519212608753" title="$:/temp/search">
+<div created="20161023184814872" modified="20170519214536089" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11179,12 +11179,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 ''
 חברה טובה''</pre>
 </div>
-<div created="20170225214818327" modified="20170519212723759" title="מריאן">
+<div created="20170225214818327" modified="20170519214513302" title="מריאן">
 <pre>[img[pictures/marian.jpg]]
 
 !!![[גורה]]:
 
-אימא של [[אלפרד]], שעזבה לפני שנים רבות.</pre>
+אימא של [[אלפרד]], שנטשה את ביתם ונסעה לצרפת אל גבר אחר כשאלפרד היה בן 9.</pre>
 </div>
 <div created="20161024181726961" modified="20170507181620472" tags="HH" title="מרינה זוטו">
 <pre>פרוייקט [[דיור מוגז]] ב[[ים טתיס]]
