משפחת אברואה - לא סופי

--- a/index.html
+++ b/index.html
@@ -449,6 +449,8 @@ Error message and password prompt
 
 <li>מנקים היטב</li>
 
+<li>מסוכנת</li>
+
 <li>מספרה</li>
 
 <li>מערכת העיתון</li>
@@ -8413,7 +8415,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="אלפרד [[האחיות כהן]]" title="$:/StoryList">
+<div list="מסוכנת [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8433,7 +8435,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170519214536089" title="$:/temp/search">
+<div created="20161023184814872" modified="20170520202232241" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8986,7 +8988,7 @@ Error message and password prompt
 
 ליום הולדתה הרביעי קיבלה אירי מדודתה, שחזרה מביקור בהוואי, בית אננס עשוי בד מרופד. בתוך האננס גרו אבא הוואי, אימא הוואית, בתם הקטנה שלימים הפכה לזהבית נערת הגומי, ובייבי אננס שאירי אהבה להתפאר בו. ב[[ליל הדובונאז']] הלך הבייבי אננס לאיבוד, ואירי לגמרי ממורמרת על זה. מן הצד השני נוסד האתר [[דובונאז' אלסטיק|http://coensisters.org/doobonage.html]] </pre>
 </div>
-<div created="20170225204122418" modified="20170417190313173" tags="[[אחות כהן]]" title="ג'וזף אברואה">
+<div created="20170225204122418" modified="20170520202447705" tags="[[אחות כהן]]" title="ג'וזף אברואה">
 <pre>[img[pictures/jozef.jpg]]
 
 
@@ -8995,7 +8997,7 @@ Error message and password prompt
 
 !!![[גורה]]:
 
-ג'וזף אברואה הוא גבר יפה, גבוה וחכם. הוא בן 60, רוב חייו כתב מאמרי דעה בעיתונים בספרד. הוא שמאלן, הוא טוב לב, הוא סופר נחמד, והוא אבא של [[אלפרד]] ובן זוגה של [[ז'נבייב]].
+ג'וזף אברואה הוא גבר יפה, גבוה וחכם. הוא בן 60, רוב חייו כתב מאמרי דעה בעיתונים בספרד. הוא שמאלן, הוא טוב לב, הוא סופר נחמד, [[גרושתו|מריאן]] עזבה והשאירה אותו עם ילדיו, והוא אבא של [[אלפרד]] ובן זוגה של [[ז'נבייב]].
 
 כשאלפרד ואני היינו יחד, ונסענו ליער ונפצעתי, ג'וזף דאג לי ולהכל לאורך כל הדרך, ומאז כולנו חיים באושר ועושר.</pre>
 </div>
@@ -9288,15 +9290,14 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170225205632304" modified="20170519204326569" title="דפני אברואה">
-<pre>[img[pictures/VyWqwwQS42pbZ2oV.jpg]]
+<div created="20170225205632304" modified="20170520202243710" title="דפני אברואה">
+<pre>[img[pictures/dafni-abaroa.jpg]]
 
 !!![[אלפרד]]:
 
 אל תתעסקו עם הדפני.
 
-אחותי שמבוגרת ממני בארבע שנים. 
-כשהיא הולכת, מידי כמה צעדים היא עולה על קצות אצבעותיה למעין רלווה זריז.</pre>
+היא הייתה בת ארבע כשנולדי, וזמן קצר אחרי הולדתי, [[הורי|ג'וזף אברואה]] שמו לב שהיא החלה ללכת על קצות האצבעות ולהשתולל, כלומר, להתנגד לכל דבר, לקחת כל דבר, לצעוק בלי להפסיק.  בילדותה ונערותה הייתה רזה, ספורטיבית, ומושכת, היא התגברה, יחסית, על &quot;ההפרעת הליכה&quot;, אך נשארה [[מסוכנת]].</pre>
 </div>
 <div created="20170319161219583" modified="20170507181946375" tags="HH" title="האומנית">
 <pre>[img[pictures/GiEmDl9Jbt722qkR.jpg]]
@@ -11134,6 +11135,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 </pre>
+</div>
+<div created="20170520202542754" modified="20170520232901025" tags="[[סיפורים אמיתיים]]" title="מסוכנת">
+<pre>[img[pictures/mesookenet.jpg]]
+
+!!![[אלפרד]]:
+
+ כשהייתי בן תשע, [[ודפני|דפני אברואה]] אחותי הייתה בת 11, עזבה [[אימנומריאן]] את הבית, והיגרה לפריז בעקבות גבר שאהבה, ואנחנו נשארנו עם [[אבי|ג'וזף אברואה. 
+ 
+מחר אמשיך לספר לכם, את מה שאני עייף כעת לכתוב.
+
+לילה טוב </pre>
 </div>
 <div created="20170507173634371" modified="20170507220735840" tags="HH" title="מספרה">
 <pre>[img[pictures/hamispara.jpg]]
