--- a/index.html
+++ b/index.html
@@ -11136,12 +11136,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170520202542754" modified="20170520232901025" tags="[[סיפורים אמיתיים]]" title="מסוכנת">
+<div created="20170520202542754" modified="20170521140612779" tags="[[סיפורים אמיתיים]]" title="מסוכנת">
 <pre>[img[pictures/mesookenet.jpg]]
 
 !!![[אלפרד]]:
 
- כשהייתי בן תשע, [[ודפני|דפני אברואה]] אחותי הייתה בת 11, עזבה [[אימנומריאן]] את הבית, והיגרה לפריז בעקבות גבר שאהבה, ואנחנו נשארנו עם [[אבי|ג'וזף אברואה. 
+ כשהייתי בן תשע, [[ודפני|דפני אברואה]] אחותי הייתה בת 11, עזבה [[אימנו|מריאן]] את הבית, והיגרה לפריז בעקבות גבר שאהבה, ואנחנו נשארנו עם [[אבי|ג'וזף אברואה]]. 
  
 מחר אמשיך לספר לכם, את מה שאני עייף כעת לכתוב.
 
