--- a/index.html
+++ b/index.html
@@ -8415,7 +8415,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="מסוכנת [[האחיות כהן]]" title="$:/StoryList">
+<div list="" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8833,12 +8833,22 @@ Error message and password prompt
 
 ביתה הבכורה של [[ז'נבייב]]. היא בת עשרים ובקרוב תתחיל ללמוד פסיכולוגיה. בינתיים היא ממלצרת [[בקוסקוס|הקוסקוס]].</pre>
 </div>
-<div created="20170328195137638" modified="20170417190736513" tags="[[אחות כהן]]" title="אלפרד">
+<div created="20170328195137638" modified="20170521221742556" tags="[[אחות כהן]]" title="אלפרד">
 <pre>[img[pictures/alfred.jpg]]
 
 !!![[גורה]]:
 
-דברים לוקחים זמן. לקח לי זמן להיות יכולה לנסות לצייר את אלפרד ולכתוב עליו, אבל אלפרד הוא חלק בלתי נפרד מהחיי ומחיי כולנו. כשהוא נכנס לחדר, נכנס ענן חם וטוב.
+דברים לוקחים זמן. לקח לי זמן להיות יכולה לנסות לצייר את אלפרד ולכתוב עליו, אבל אלפרד הוא חלק בלתי נפרד מחיי ומחיי [[כולנו|האחיות כהן]]. כשהוא נכנס לחדר, נכנס ענן חם וטוב. הוא [[סבל|מסוכנת]] לא מעט בחייו, ובכל זאת נשאר אדם בעל לב טהור.
+
+הכרתי אותו בפריז, בלימודי התאטרון. הפכנו לזוג. רציתי אותו מאד, הוא עזב אותי, נפגעתי, חזרנו, נפצעתי, הייתי בקומה, התעוררתי מהקומה כעבור שלושה שבועות, זרקתי אותו לכל הרוחות, יויו שמר איתו על קשר, אמנו נפטרה, דןדן ואני נסענו להודו להביא את אירי, חזרנו, עברנו [[לדירה|הדירה]], סלחתי לו, היה לנו טוב, [[דןדן נסע]], התפרקתי שוב, הוא השגיח עלי בעדינות, גם [[אביו|ג'וזף אברואה]].
+
+הוא חכם, כשרוני, חרוץ, סקרן, לא מכיר בערך עצמו, ואין לו מושג כמה שהוא חתיך.
+
+
+
+
+
+
 
 </pre>
 </div>
@@ -11136,16 +11146,24 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170520202542754" modified="20170521140612779" tags="[[סיפורים אמיתיים]]" title="מסוכנת">
+<div created="20170520202542754" modified="20170521215512817" tags="[[סיפורים אמיתיים]]" title="מסוכנת">
 <pre>[img[pictures/mesookenet.jpg]]
 
 !!![[אלפרד]]:
 
- כשהייתי בן תשע, [[ודפני|דפני אברואה]] אחותי הייתה בת 11, עזבה [[אימנו|מריאן]] את הבית, והיגרה לפריז בעקבות גבר שאהבה, ואנחנו נשארנו עם [[אבי|ג'וזף אברואה]]. 
- 
-מחר אמשיך לספר לכם, את מה שאני עייף כעת לכתוב.
+[[דפני|דפני אברואה]], אחותי שמבוגרת ממני בארבע שנים, היא אדם מסוכן, לא פחות מזה.
 
-לילה טוב </pre>
+היא שוחררה לפני כשנה מאשפוז שארך חמש שנים. היא מתגוררת בדיור מוגן לחולי נפש בשיקום לא רחוק מפריז.
+
+כשהייתי בן תשע, עזבה יום אחד [[אמי|מריאן]] את ביתנו ברעש גדול, ומאז לא חזרה. 
+
+נשארנו עם [[אבי|ג'וזף אברוראה]], שעשה כל שיכל להיטיב עם חיינו. מצבה של אחותי נראה היה סביר, למרות שחיבלה בכל נסיון של אבי להיקשר לאישה. היה לה יופי מיוחד וצחוק גדול, ולא מעט קסם אישי. היא ציירה. בגיל עשרים היא נישאה לדויד. (לאחר שהפרידה בינו לבין חברה טובה שלה, איתה חי לא מעט שנים).
+
+שנה אחר-כך היא ילדה את ריקי המתוקה. היא לא הצליחה לתפקד כאם. דויד גידל את ריקי, והיא, עברה מעבודה לעבודה, מחברה לחברה, מחבר לחבר. מתחברת לאנשים, ומיד נכנסת להם לחיים ולנשמה. מפרידה בין זוגות, מנצלת, מגיעה לבתים ושואבת כל מה שרק אפשר, כולל את מה שיש במקרר, בגדים, חפצים. מחטטת להם במחשב, לא נותנת מנוחה - עד שזה מתפוצץ בבום גדול.
+
+מעת לעת, אבי נאלץ, לכבות אחריה את השריפות, ולנקות את הלכלוך. 
+
+רוע הלב שלה הוא בלתי נסלח, ואני רק מציע - אל תתעסקו על הדפני!!!</pre>
 </div>
 <div created="20170507173634371" modified="20170507220735840" tags="HH" title="מספרה">
 <pre>[img[pictures/hamispara.jpg]]
