--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ Error message and password prompt
 
 <li>דניאל</li>
 
-<li>דפני אברואה</li>
+<li>דפני אַבַּרוֹאַה</li>
 
 <li>האומנית</li>
 
@@ -502,6 +502,8 @@ Error message and password prompt
 <li>עוגת מוקה</li>
 
 <li>עורכת הדין</li>
+
+<li>עושים שלום</li>
 
 <li>עיגולי מרציפן</li>
 
@@ -8403,10 +8405,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170119225008497" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20161023184709475" modified="20170515201654190" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/System</pre>
+<div created="20161023184709475" modified="20170522173458569" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Orphans</pre>
 </div>
-<div created="20161023184705203" modified="20170515202243361" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20170522173606020" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8415,7 +8417,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="" title="$:/StoryList">
+<div list="[[עושים שלום]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8435,7 +8437,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170520202232241" title="$:/temp/search">
+<div created="20161023184814872" modified="20170522173539959" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8998,7 +9000,7 @@ Error message and password prompt
 
 ליום הולדתה הרביעי קיבלה אירי מדודתה, שחזרה מביקור בהוואי, בית אננס עשוי בד מרופד. בתוך האננס גרו אבא הוואי, אימא הוואית, בתם הקטנה שלימים הפכה לזהבית נערת הגומי, ובייבי אננס שאירי אהבה להתפאר בו. ב[[ליל הדובונאז']] הלך הבייבי אננס לאיבוד, ואירי לגמרי ממורמרת על זה. מן הצד השני נוסד האתר [[דובונאז' אלסטיק|http://coensisters.org/doobonage.html]] </pre>
 </div>
-<div created="20170225204122418" modified="20170520202447705" tags="[[אחות כהן]]" title="ג'וזף אברואה">
+<div created="20170225204122418" modified="20170522173443649" tags="[[אחות כהן]]" title="ג'וזף אברואה">
 <pre>[img[pictures/jozef.jpg]]
 
 
@@ -9030,7 +9032,7 @@ Error message and password prompt
 
 !!![[גורה]]:</pre>
 </div>
-<div created="20170514214551974" modified="20170514232942321" tags="[[סיפורים אמיתיים]]" title="גבר פריבילגי">
+<div created="20170514214551974" modified="20170522172321747" tags="[[סיפורים אמיתיים]]" title="גבר פריבילגי">
 <pre>[img[pictures/gever-privilegy.jpg]]
 
 !!![[יויו]]:
@@ -9041,7 +9043,7 @@ Error message and password prompt
 
 אולי רק אדם פריבילגי, יכול להרשות לעצמו לא לבדוק מה יש לאחרים, אבל כל אחד יכול לראות את יתרונותיו היחסיים.
 
-אני גבר עם הרבה בעיות, ויש לי בעיית דימוי עצמי קשה.
+[[אני גבר עם הרבה בעיות|עושים שלום]], ויש לי בעיית דימוי עצמי קשה.
 
 נולדתי עם רגל אחת קצרה מן השניה עד כדי צליעה קלה, וסבלתי מכאבים באגן הירכיים. בילדותי עברתי ניתוחים. הייתי ואני עדיין - נמוך. אני כל הזמן מנסה לרצות, וזה מגיע לשיא, כשמדובר בנשים.
 
@@ -9300,7 +9302,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170225205632304" modified="20170520202243710" title="דפני אברואה">
+<div created="20170225205632304" modified="20170522173409945" title="דפני אַבַּרוֹאַה">
 <pre>[img[pictures/dafni-abaroa.jpg]]
 
 !!![[אלפרד]]:
@@ -10263,7 +10265,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 בקרוב יועתק לכאן.</pre>
 </div>
-<div created="20170425180523126" modified="20170514194231385" tags="[[בחוות החיות]]" title="כורתים עצים">
+<div created="20170425180523126" modified="20170522172147494" tags="[[בחוות החיות]]" title="כורתים עצים">
 <pre>[img[pictures/kortim-ezim.jpg]]
 
 !!![[גורה]]:
@@ -11146,24 +11148,24 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170520202542754" modified="20170521215512817" tags="[[סיפורים אמיתיים]]" title="מסוכנת">
+<div created="20170520202542754" modified="20170522172547729" tags="[[סיפורים אמיתיים]]" title="מסוכנת">
 <pre>[img[pictures/mesookenet.jpg]]
 
 !!![[אלפרד]]:
 
 [[דפני|דפני אברואה]], אחותי שמבוגרת ממני בארבע שנים, היא אדם מסוכן, לא פחות מזה.
 
-היא שוחררה לפני כשנה מאשפוז שארך חמש שנים. היא מתגוררת בדיור מוגן לחולי נפש בשיקום לא רחוק מפריז.
+היא שוחררה לפני כשנה מאשפוז שארך חמש שנים. היא מתגוררת בדיור מוגן לחולי נפש בשיקום, לא רחוק מפריז.
 
 כשהייתי בן תשע, עזבה יום אחד [[אמי|מריאן]] את ביתנו ברעש גדול, ומאז לא חזרה. 
 
-נשארנו עם [[אבי|ג'וזף אברוראה]], שעשה כל שיכל להיטיב עם חיינו. מצבה של אחותי נראה היה סביר, למרות שחיבלה בכל נסיון של אבי להיקשר לאישה. היה לה יופי מיוחד וצחוק גדול, ולא מעט קסם אישי. היא ציירה. בגיל עשרים היא נישאה לדויד. (לאחר שהפרידה בינו לבין חברה טובה שלה, איתה חי לא מעט שנים).
+נשארנו עם [[אבי|ג'וזף אברואה]], שעשה כל שיכל להיטיב עם חיינו. מצבה של אחותי נראה היה סביר, למרות שחיבלה בכל נסיון של אבי להיקשר לאישה. היה לה יופי מיוחד, צחוק גדול, ולא מעט קסם אישי. היא ציירה. בגיל עשרים היא נישאה לדויד. (לאחר שהפרידה בינו לבין חברה טובה שלה, איתה חי לא מעט שנים).
 
 שנה אחר-כך היא ילדה את ריקי המתוקה. היא לא הצליחה לתפקד כאם. דויד גידל את ריקי, והיא, עברה מעבודה לעבודה, מחברה לחברה, מחבר לחבר. מתחברת לאנשים, ומיד נכנסת להם לחיים ולנשמה. מפרידה בין זוגות, מנצלת, מגיעה לבתים ושואבת כל מה שרק אפשר, כולל את מה שיש במקרר, בגדים, חפצים. מחטטת להם במחשב, לא נותנת מנוחה - עד שזה מתפוצץ בבום גדול.
 
-מעת לעת, אבי נאלץ, לכבות אחריה את השריפות, ולנקות את הלכלוך. 
+מעת לעת, אבי נאלץ להיות [[המייק|http://www.imdb.com/character/ch0185321/?ref_=tt_cl_t9]] שלה. 
 
-רוע הלב שלה הוא בלתי נסלח, ואני רק מציע - אל תתעסקו על הדפני!!!</pre>
+רוע הלב שלה הוא בלתי נסלח, ואני רק מציע - אל תתעסקו עם הדפני!!!</pre>
 </div>
 <div created="20170507173634371" modified="20170507220735840" tags="HH" title="מספרה">
 <pre>[img[pictures/hamispara.jpg]]
@@ -11573,6 +11575,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 !!![[גורה]]:
 
 ננסי  עורכת דין, למדה באנגליה, פלצנית, גזענית, כל הסט של אחות קיי, כולל &quot;אופנתיות&quot; בכל התחומים, מותגיסטית, מרבה לדבר בלועזית, יש לה ילד מגעיל שחוטף מכות ומגיע לו.</pre>
+</div>
+<div created="20170522171825469" modified="20170522173731538" tags="[[בחוות החיות]]" title="עושים שלום">
+<pre>[img[pictures/clavzirim-osim-shalom.jpg]]
+
+
+!!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, הַכְּלַבְזִירִים עושים שלום.</pre>
 </div>
 <div created="20170414012036863" modified="20170424211626183" tags="[[מתכוני ארוחת הכריסמס]] [[המטבח על פי ז'נבייב]]" title="עיגולי מרציפן">
 <pre>[img[pictures/marzipan.jpg]]
